--- a/vits/requirements.txt
+++ b/vits/requirements.txt
@@ -1,10 +1,131 @@
+absl-py==2.0.0
+aiofiles==23.2.1
+altair==5.1.2
+annotated-types==0.6.0
+anyio==3.7.1
+attrs==23.1.0
+audioread==3.0.1
+Babel==2.13.1
+cachetools==4.2.4
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+clldutils==3.20.0
+colorama==0.4.6
+colorlog==6.7.0
+csvw==3.1.3
+cycler==0.12.1
 Cython==0.29.21
+decorator==4.4.2
+eng-to-ipa==0.0.2
+exceptiongroup==1.1.3
+fastapi==0.104.1
+ffmpy==0.3.1
+filelock==3.13.1
+fsspec==2023.10.0
+google-auth==2.23.4
+google-auth-oauthlib==1.0.0
+gradio==4.1.1
+gradio_client==0.7.0
+grpcio==1.59.2
+h11==0.14.0
+httpcore==1.0.1
+httpx==0.25.1
+huggingface-hub==0.18.0
+idna==3.4
+imageio==2.32.0
+imageio-ffmpeg==0.4.9
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+isodate==0.6.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+kiwisolver==1.4.5
+language-tags==1.2.0
+lazy_loader==0.3
 librosa==0.8.0
+llvmlite==0.37.0
+lxml==4.9.3
+Markdown==3.5.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
 matplotlib==3.3.1
-numpy==1.18.5
+mdurl==0.1.2
+moviepy==1.0.3
+msgpack==1.0.7
+nltk==3.8.1
+numba==0.54.0
+numpy==1.19.5
+oauthlib==3.2.2
+orjson==3.9.10
+packaging==23.2
+pandas==1.1.5
 phonemizer==2.2.1
-scipy==1.5.2
-tensorboard==2.3.0
-torch==1.6.0
-torchvision==0.7.0
+Pillow==9.5.0
+pkgutil_resolve_name==1.3.10
+platformdirs==3.11.0
+pooch==1.8.0
+proglog==0.1.10
+protobuf==3.20.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydub==0.25.1
+Pygments==2.16.1
+pylatexenc==2.10
+pyparsing==3.1.1
+python-crfsuite==0.9.9
+python-dateutil==2.8.2
+python-multipart==0.0.6
+pytz==2023.3.post1
+PyYAML==6.0.1
+rdflib==7.0.0
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+resampy==0.4.2
+rfc3986==1.5.0
+rich==13.6.0
+rpds-py==0.12.0
+rsa==4.9
+scikit-learn==1.3.2
+scipy==1.10.1
+segments==2.2.1
+semantic-version==2.10.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.0
+soundfile==0.12.1
+soxr==0.3.7
+starlette==0.27.0
+tabulate==0.9.0
+tensorboard==2.14.0
+tensorboard-data-server==0.7.2
+tensorboard-plugin-wit==1.8.1
+threadpoolctl==3.2.0
+tomlkit==0.12.0
+toolz==0.12.0
+torch==1.12.0+cu116
+torchaudio==0.12.0+cu116
+torchvision==0.13.0+cu116
+tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+underthesea==6.8.0
+underthesea_core==1.0.4
 Unidecode==1.1.1
+uritemplate==4.1.1
+urllib3==2.0.7
+uvicorn==0.24.0.post1
+vinorm==2.0.7
+webrtcvad==2.0.10
+websockets==11.0.3
+Werkzeug==3.0.1
+zipp==3.17.0
